test/sema/lambdas/lambda_immutable_param.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:21: error: 'x' cannot be mutated
  ->(x: number) { x = 1; };
}
